// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderFlakySuiteIssueBody renders a multi-test suite with distinct failures, a skipped note and related issues 1`] = `
"3 tests in the [\`Default status alert\`](https://github.com/elastic/kibana/blob/main/x-pack/solutions/observability/plugins/synthetics/test/scout/ui/tests/default_status_alert.spec.ts) suite appear to be flaky:

| Test | Flaky branches | Dashboard |
|---|---|---|
| does not keep a hidden histogram after visiting Dashboard | **\`main\` 10% (20 / 200)**<br>**\`9.2\` 5% (3 / 64)** | [dashboard](https://appex-qa.kb.europe-west1.gcp.cloud.es.io/s/scout/app/dashboards#/view/a06c26f6-23ac-479d-acb5-5a8b234793a8?_g=(filters:!((meta:(alias:'Test%20ID',disabled:!f,negate:!f),query:(bool:(must:!((match_phrase:(test.id:'a'))))))))) |
| reverts breakdown, interval, and visibility on a saved session | **\`main\` 10% (49 / 509)** | [dashboard](https://appex-qa.kb.europe-west1.gcp.cloud.es.io/s/scout/app/dashboards#/view/a06c26f6-23ac-479d-acb5-5a8b234793a8?_g=(filters:!((meta:(alias:'Test%20ID',disabled:!f,negate:!f),query:(bool:(must:!((match_phrase:(test.id:'b'))))))))) |
| persists hide/show of the histogram on a saved session | **\`main\` 10% (49 / 509)** | [dashboard](https://appex-qa.kb.europe-west1.gcp.cloud.es.io/s/scout/app/dashboards#/view/a06c26f6-23ac-479d-acb5-5a8b234793a8?_g=(filters:!((meta:(alias:'Test%20ID',disabled:!f,negate:!f),query:(bool:(must:!((match_phrase:(test.id:'c'))))))))) |

Latest run on \`main\` was skipped (2026-09-09).

### Suite

| Field | Value |
|---|---|
| **Framework** | Scout (Playwright) |
| **Category** | UI test |
| **File** | [\`x-pack/solutions/observability/plugins/synthetics/test/scout/ui/tests/default_status_alert.spec.ts\`](https://github.com/elastic/kibana/blob/main/x-pack/solutions/observability/plugins/synthetics/test/scout/ui/tests/default_status_alert.spec.ts) |
| **Config** | [\`x-pack/solutions/observability/plugins/synthetics/test/scout/ui/playwright.config.ts\`](https://github.com/elastic/kibana/blob/main/x-pack/solutions/observability/plugins/synthetics/test/scout/ui/playwright.config.ts) |
| **Owners** | \`elastic/obs-ux-management-team\`, \`elastic/kibana-data-discovery\`, \`elastic/other-team\` |

### Failures

#### Failures by Error Message

2 distinct errors:

<details>
<summary><b>96% of failures</b> (23 across 2 tests) · <code>Error: expect(locator).toBeVisible() failed</code> · 1–9 Sep 2026</summary>

\`\`\`text
Error: expect(locator).toBeVisible() failed

Locator: chart | pipe

from b
\`\`\`

| Field | Value |
|---|---|
| **Tests** | *does not keep a hidden histogram after visiting Dashboard*, *reverts breakdown, interval, and visibility on a saved session* |
| **Pipelines** | \`kibana-on-merge\` (15), \`kibana-pull-request\` (8) |
| **Branches** | \`main\`, \`9.2\`, 2 PRs |
| **Targets** | \`serverless-security_complete\`, \`stateful-classic\` |
| **Last seen** | [#12350](https://buildkite.com/elastic/kibana-on-merge/builds/12350#0199-b000) · 2026-09-09 12:00 UTC |

</details>

<details>
<summary><b>4% of failures</b> (1 in 1 build) · <code>TimeoutError: page.waitForSelector: Timeout 10000ms exceeded.</code> · 7 Sep 2026</summary>

\`\`\`text
TimeoutError: page.waitForSelector: Timeout 10000ms exceeded.
\`\`\`

| Field | Value |
|---|---|
| **Tests** | *reverts breakdown, interval, and visibility on a saved session* |
| **Pipelines** | \`kibana-on-merge\` only |
| **Branches** | \`main\` |
| **Last seen** | [#12200](https://buildkite.com/elastic/kibana-on-merge/builds/12200) · 2026-09-07 06:12 UTC |

</details>

*Errors that only appeared in PR builds were excluded.*

#### Failures by Branch

| Branch | Failed builds | Sample failure |
|---|---|---|
| 🔴 \`main\` | 49 / 509 (**10%**) | [#12345](https://buildkite.com/elastic/kibana-on-merge/builds/12345#0199-abcd) · 2026-09-09 06:12 UTC |
| 🔴 \`9.2\` | 3 / 64 (**5%**) | [#12290](https://buildkite.com/elastic/kibana-on-merge/builds/12290#0199-9200) · 2026-09-07 11:40 UTC |
| ✅ \`9.1\` | 0 / 58 |  |

#### Failures by Target

| Target | Environment | Failed builds | Sample failure |
|---|---|---|---|
| 🔴 \`stateful-classic\` | Local deployment | 49 / 509 (**10%**) | [#12345](https://buildkite.com/elastic/kibana-on-merge/builds/12345#0199-abcd) · 2026-09-09 06:12 UTC |
| 🔴 \`serverless-security_complete\` | MKI | 3 / 64 (**5%**) | 2026-09-07 11:40 UTC |
| ✅ \`serverless-observability_complete\` | Local serverless simulation | 0 / 426 |  |

Possibly related: #7, #8.

<!-- kibanaCiData = {\\"flaky-test-suite\\":{\\"suite.filePath\\":\\"x-pack/solutions/observability/plugins/synthetics/test/scout/ui/tests/default_status_alert.spec.ts\\",\\"suite.title\\":\\"Default status alert\\",\\"suite.framework\\":\\"playwright\\",\\"suite.testIds\\":[\\"a\\",\\"b\\",\\"c\\"],\\"report.generatedAt\\":\\"2026-09-09T09:04:41.000Z\\",\\"report.count\\":1,\\"report.history\\":[{\\"generatedAt\\":\\"2026-09-09T09:04:41.000Z\\",\\"builds\\":264,\\"failedBuilds\\":23}]}} -->"
`;

exports[`renderFlakySuiteIssueBody renders a single-test suite 1`] = `
"1 test in the [\`Default status alert\`](https://github.com/elastic/kibana/blob/main/x-pack/solutions/observability/plugins/synthetics/test/scout/ui/tests/default_status_alert.spec.ts) suite appears to be flaky:

| Test | Flaky branches | Dashboard |
|---|---|---|
| creates default alert, triggers on down status, and recovers | **\`main\` 10% (49 / 509)** | [dashboard](https://appex-qa.kb.europe-west1.gcp.cloud.es.io/s/scout/app/dashboards#/view/a06c26f6-23ac-479d-acb5-5a8b234793a8?_g=(filters:!((meta:(alias:'Test%20ID',disabled:!f,negate:!f),query:(bool:(must:!((match_phrase:(test.id:'playwright:default_status_alert:creates%20default%20alert'))))))))) |

### Suite

| Field | Value |
|---|---|
| **Framework** | Scout (Playwright) |
| **Category** | UI test |
| **File** | [\`x-pack/solutions/observability/plugins/synthetics/test/scout/ui/tests/default_status_alert.spec.ts\`](https://github.com/elastic/kibana/blob/main/x-pack/solutions/observability/plugins/synthetics/test/scout/ui/tests/default_status_alert.spec.ts) |
| **Config** | [\`x-pack/solutions/observability/plugins/synthetics/test/scout/ui/playwright.config.ts\`](https://github.com/elastic/kibana/blob/main/x-pack/solutions/observability/plugins/synthetics/test/scout/ui/playwright.config.ts) |
| **Owners** | \`elastic/obs-ux-management-team\` |

### Failures

#### Failures by Error Message

1 distinct error:

<details>
<summary><b>100% of failures</b> (61 in 49 builds) · <code>Error: Timed out 30000ms waiting for expect(locator).toBeVisible()</code> · 2–9 Sep 2026</summary>

\`\`\`text
Error: Timed out 30000ms waiting for expect(locator).toBeVisible()
\`\`\`

| Field | Value |
|---|---|
| **Pipelines** | \`kibana-on-merge\` (49), \`kibana-pull-request\` (12) |
| **Branches** | \`main\`, 1 PR |
| **Target** | \`stateful-classic\` |
| **Last seen** | [#12345](https://buildkite.com/elastic/kibana-on-merge/builds/12345#0199-abcd) · 2026-09-09 06:12 UTC |

</details>

#### Failures by Branch

| Branch | Failed builds | Sample failure |
|---|---|---|
| 🔴 \`main\` | 49 / 509 (**10%**) | [#12345](https://buildkite.com/elastic/kibana-on-merge/builds/12345#0199-abcd) · 2026-09-09 06:12 UTC |

#### Failures by Target

| Target | Environment | Failed builds | Sample failure |
|---|---|---|---|
| 🔴 \`stateful-classic\` | Local deployment | 49 / 509 (**10%**) | [#12345](https://buildkite.com/elastic/kibana-on-merge/builds/12345#0199-abcd) · 2026-09-09 06:12 UTC |
| ✅ \`serverless-observability_complete\` | Local serverless simulation | 0 / 426 |  |

#### Failures by Pipeline

Where it failed 2–9 Sep 2026, across all pipelines and branches:

| Pipeline | Failed builds | Branches | Sample failure |
|---|---|---|---|
| [\`kibana-pull-request\`](https://buildkite.com/elastic/kibana-pull-request) | 70 / 661 (**11%**) | \`main\`, 63 PRs | [#498441](https://buildkite.com/elastic/kibana-pull-request/builds/498441#0199-abcd) · 2026-09-08 16:05 UTC |
| [\`kibana-on-merge\`](https://buildkite.com/elastic/kibana-on-merge) | 49 / 509 (**10%**) | \`main\` | [#12345](https://buildkite.com/elastic/kibana-on-merge/builds/12345#0199-abcd) · 2026-09-09 06:12 UTC |
| [\`kibana-elasticsearch-snapshot-verify\`](https://buildkite.com/elastic/kibana-elasticsearch-snapshot-verify) | 1 / 5 (**20%**) | 1 | 2026-09-09 06:12 UTC |

<!-- kibanaCiData = {\\"flaky-test-suite\\":{\\"suite.filePath\\":\\"x-pack/solutions/observability/plugins/synthetics/test/scout/ui/tests/default_status_alert.spec.ts\\",\\"suite.title\\":\\"Default status alert\\",\\"suite.framework\\":\\"playwright\\",\\"suite.testIds\\":[\\"playwright:default_status_alert:creates default alert\\"],\\"report.generatedAt\\":\\"2026-09-09T09:04:41.000Z\\",\\"report.count\\":1,\\"report.history\\":[{\\"generatedAt\\":\\"2026-09-09T09:04:41.000Z\\",\\"builds\\":509,\\"failedBuilds\\":49}]}} -->"
`;
